# memento

./: README.md  blog-memento.html  blog-skillopt-sleep.html  devin-rules.snippet.md  harvest_devin.py  install.sh  judge.py  mcp-config.example.json  mcp_server.py  memento_memory.py  memento_memory_pg.py  pyproject.toml
mcpb/: build.sh  manifest.json
outreach/: cognition-pitch.md  listing-brief.md  pr-replies.md  pr-reply-validation.md  upstream-pr.md
seed_skill/: SKILL.md
tests/: test_memento.py  test_skillopt_sleep.py
