[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memento-mcp"
version = "0.1.0"
description = "Memento — a Devin MCP server that gives Devin a nightly sleep cycle to self-improve its SKILL.md."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "xerxes-y" }]
keywords = ["devin", "mcp", "skillopt", "agent", "skill-optimization"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]

# Stdlib-only. The optimization engine (microsoft/SkillOpt's `skillopt_sleep`)
# is intentionally NOT a dependency: it is loaded at runtime from the path in
# MEMENTO_ENGINE_REPO (a local clone), so it works even inside an isolated
# `uvx` environment without being published to PyPI.
dependencies = []

[project.scripts]
memento-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/xerxes-y/memento"
Repository = "https://github.com/xerxes-y/memento"

[tool.setuptools]
# Flat layout: ship the three top-level modules. The MCP server shells out to
# harvest_devin.py as a sibling file, so all three must land together.
py-modules = ["mcp_server", "harvest_devin", "judge"]
