[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devin-memento"
version = "0.8.0"
description = "Memento — a Devin MCP server that gives Devin a nightly sleep cycle to self-improve its SKILL.md."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "xerxes-y" }]
keywords = ["devin", "mcp", "skillopt", "agent", "skill-optimization"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]

# Stdlib-only. The optimization engine (microsoft/SkillOpt's `skillopt_sleep`)
# is intentionally NOT a dependency: it is loaded at runtime from the path in
# MEMENTO_ENGINE_REPO (a local clone), so it works even inside an isolated
# `uvx` environment without being published to PyPI.
dependencies = []

[project.optional-dependencies]
# Shared per-team memory backend (PostgreSQL + pgvector).
postgres = ["psycopg[binary]>=3.1"]
# Keycloak/OIDC team gate: derive the memory namespace from a verified token
# instead of trusting the caller (MEMENTO_AUTH=keycloak). See memento_auth.py.
team-auth = ["pyjwt[crypto]>=2.8"]

[project.scripts]
devin-memento = "mcp_server:main"
memento-mcp = "mcp_server:main"  # legacy alias for the console command

[project.urls]
Homepage = "https://github.com/xerxes-y/memento"
Repository = "https://github.com/xerxes-y/memento"

[tool.setuptools]
# Flat layout: ship the top-level modules. The MCP server shells out to
# harvest_devin.py as a sibling file, so they must all land together.
# memento_memory_pg + memento_auth are loaded lazily only when their optional
# extras (postgres / team-auth) are in use.
py-modules = [
  "mcp_server", "harvest_devin", "judge",
  "memento_memory", "memento_memory_pg", "memento_auth",
]
